updated hero image

--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
   <meta charset=utf-8>
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>#HACKMCFC - Player Performance Hack by Manchester City Football Club</title>
-  <meta name=description content="HACKMCFC is the first performance data hack with OptaPro, ChyronHego and the Premier League.">
-  <meta name=keywords content="MCFC, Manchester City, Hack Day, Hack, Performance Sports Data, OptaPro">
+  <title>#HACKMCFC - Fan Engagement Hack by Manchester City Football Club - January 2017</title>
+  <meta name=description content="HACKMCFC is XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX">
+  <meta name=keywords content="MCFC, Manchester City, Hack Day, Hack, Hackathon">
   <link rel="stylesheet" type="text/css" href="css/global.css" />
   <link rel="shortcut icon" href="img/favicon.ico" /><link rel="mask-icon" href="img/favicon.svg" color="#FC250E">
+
   <meta property="og:site" content="hackmcfc.co.uk" />
-  <meta property="og:title" content="#HACKMCFC 29-31 July 2016" />
-  <meta property="og:description" content="Manchester City football club's first player performance data hack, in partnership with OptaPro, ChyronHego and the Premier League." />
+  <meta property="og:title" content="#HACKMCFC XXXXXXXXX 2017" />
+  <meta property="og:description" content="Manchester City football club's XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
   <meta property="og:image" content="http://www.hackmcfc.co.uk/img/hackmcfc-fb.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:url" content="http://www.hackmcfc.co.uk" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@citygeeks" />
-  <meta name="twitter:title" content="#HACKMCFC 29-31 July 2016" />
-  <meta name="twitter:description" content="Manchester City football club's first player performance data hack, in partnership with OptaPro, ChyronHego and the Premier League." />
+  <meta name="twitter:site" content="@ManCityDigital" />
+  <meta name="twitter:title" content="#HACKMCFC XXXXXXXXX 2017" />
+  <meta name="twitter:description" content="Manchester City football club's XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
   <meta name="twitter:image" content="http://www.hackmcfc.co.uk/img/hackmcfc-tw.jpg" />
   <meta name="twitter:url" content="http://www.hackmcfc.co.uk" />
 </head>
