July hack page updated

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="content about-top">
-      <p class="line-wrap">Following on from our world first #HACKMCFC, we are happy to announce the next Hack MCFC focussed on fan engagement. We will be delivering a wealth of research and data around match day experiences and inviting you to develop new insights and innovation in order to create new digital products.</p>
+      <p class="line-wrap">Following on from our <a href="player-performance-data-july-2016/">world first #HACKMCFC</a>, we are happy to announce the next Hack MCFC focussed on fan engagement. We will be delivering a wealth of research and data around match day experiences and inviting you to develop new insights and innovation in order to create new digital products.</p>
       <p>The previous hack was held at the awesome Etihad Campus, however this time around we will be taking you to the Etihad Stadium itself! Immerse yourself in the surroundings, while the club release previously unavailable research and content around fan experiences, behaviors, needs and motivations.</p>
       <p>We’re looking for the most talented, insightful, innovative and creative programmers, designers, researchers, product people and innovators. To work alongside them we’d also welcome strategists, marketing or social media specialists and of course fans.</p>
       <h2>TWO TRACKS</h2>
@@ -226,7 +226,7 @@
   <div class="data">
     <div class="content extra-pad">
       <h2>Recap</h2>
-      <p class="line-wrap">Here's what happened at the last #HACKMCFC, held in July 2016</p>
+      <p class="line-wrap">Here's what happened at the last <a href="player-performance-data-july-2016/">#HACKMCFC on Player Performace Data</a>.</p>
 
       <video id="my-video" class="video-js vjs-16-9" controls preload="auto" poster="img/video-poster.jpg" data-setup="{'fluid': true}">
         <source src="https://dl.dropboxusercontent.com/u/6340770/Hackathon-720.mp4" type='video/mp4'>
