Code of conduct tweaks

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     </a>
   	<div class="copy">
       <ul class="social">
-        <li><a href="https://twitter.com/mcfcgeeks" class="ss-icon">twitter</a></li>
+        <li><a href="https://twitter.com/mancitydigital" class="ss-icon">twitter</a></li>
         <li><a href="https://www.facebook.com/mcfcofficial" class="ss-icon">facebook</a></li>
         <li><a href="https://www.instagram.com/mcfcofficial/" class="ss-icon">instagram</a></li>
         <li><a href="https://www.youtube.com/user/mcfcofficial" class="ss-icon">youtube</a></li>
