change hackmcfc to hackmancity

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -4,26 +4,26 @@
   <meta charset=utf-8>
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>Code of Conduct - #HACKMCFC</title>
-  <meta name=description content="HACKMCFC is the first performance data hack with OptaPro, ChyronHego and the Premier League.">
+  <title>Code of Conduct - #HACKMANCITY</title>
+  <meta name=description content="HACKMANCITY is the first performance data hack with OptaPro, ChyronHego and the Premier League.">
   <meta name=keywords content="MCFC, Manchester City, Hack Day, Hack, Performance Sports Data, OptaPro">
   <link rel="stylesheet" type="text/css" href="css/global.css" />
   <link rel="shortcut icon" href="img/favicon.ico" /><link rel="mask-icon" href="img/favicon.svg" color="#FC250E">
 
-  <meta property="og:site" content="hackmcfc.co.uk" />
-  <meta property="og:title" content="#HACKMCFC 29-31 July 2016" />
+  <meta property="og:site" content="hackmancity.co.uk" />
+  <meta property="og:title" content="#HACKMANCITY 10-12 February 2017" />
   <meta property="og:description" content="Manchester City football club's first player performance data hack, in partnership with OptaPro, ChyronHego and the Premier League." />
-  <meta property="og:image" content="http://www.hackmcfc.co.uk/img/hackmcfc-fb.jpg" />
+  <meta property="og:image" content="http://www.hackmancity.co.uk/img/hackmcfc-fb.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:url" content="http://www.hackmcfc.co.uk" />
+  <meta property="og:url" content="http://www.hackmancity.co.uk" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@citygeeks" />
-  <meta name="twitter:title" content="#HACKMCFC 29-31 July 2016" />
+  <meta name="twitter:title" content="#HACKMANCITY 10-12 February 2017" />
   <meta name="twitter:description" content="Manchester City football club's first player performance data hack, in partnership with OptaPro, ChyronHego and the Premier League.;" />
-  <meta name="twitter:image" content="http://www.hackmcfc.co.uk/img/hackmcfc-tw.jpg" />
-  <meta name="twitter:url" content="http://www.hackmcfc.co.uk" />
+  <meta name="twitter:image" content="http://www.hackmancity.co.uk/img/hackmcfc-tw.jpg" />
+  <meta name="twitter:url" content="http://www.hackmancity.co.uk" />
 </head>
 <body class="code-of-conduct">
   <script>
@@ -69,7 +69,7 @@
       <p>Attendees violating the above rules may be asked to leave the hack at the sole discretion of the conference organisers.</p>
       <p>Hack staff will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
       <p>We expect participants to follow these rules at the hack venues and related social events.</p>
-      <p>Questions? Contact us on <a href="mailto:hackmcfc@aplaything.com?subject=CodeofConductfeedback">hackmcfc@aplaything.com</a></p>
+      <p>Questions? Contact us on <a href="mailto:hackmancity@aplaything.com?subject=CodeofConductfeedback">hackmancity@aplaything.com</a></p>
       <p>Inspired by <a href="https://www.manchesterdigital.com/">Manchester Digital</a> Code of Conduct</p>
           </div>
   </div><!-- .data -->
