--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -12,7 +12,7 @@
 
   <meta property="og:site" content="hackmancity.co.uk" />
   <meta property="og:title" content="#HACKMANCITY 10-12 February 2017" />
-  <meta property="og:description" content="Manchester City football club's first player performance data hack, in partnership with OptaPro, ChyronHego and the Premier League." />
+  <meta property="og:description" content="Manchester City football club's first digital fan enagement hack" />
   <meta property="og:image" content="http://www.hackmancity.co.uk/img/hackmcfc-fb.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@citygeeks" />
   <meta name="twitter:title" content="#HACKMANCITY 10-12 February 2017" />
-  <meta name="twitter:description" content="Manchester City football club's first player performance data hack, in partnership with OptaPro, ChyronHego and the Premier League.;" />
+  <meta name="twitter:description" content="Manchester City football club's first digital fan enagement hack" />
   <meta name="twitter:image" content="http://www.hackmancity.co.uk/img/hackmcfc-tw.jpg" />
   <meta name="twitter:url" content="http://www.hackmancity.co.uk" />
 </head>
