--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
   <title>#HACKMANCITY - Fan Engagement Hack by Manchester City Football Club - February 2017</title>
-  <meta name=description content="HACKMANCITY is XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX">
+  <meta name=description content="HACKMANCITY is the frist digital fan enagement hack">
   <meta name=keywords content="MCFC, Manchester City, Hack Day, Hack, Hackathon">
   <link rel="stylesheet" type="text/css" href="css/global.css" />
   <link rel="shortcut icon" href="img/favicon.ico" /><link rel="mask-icon" href="img/favicon.svg" color="#FC250E">
 
   <meta property="og:site" content="hackmancity.co.uk" />
-  <meta property="og:title" content="#HACKMANCITY XXXXXXXXX 2017" />
-  <meta property="og:description" content="Manchester City football club's XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+  <meta property="og:title" content="#HACKMANCITY 10-12 February 2017" />
+  <meta property="og:description" content="Manchester City football club's first digital fan enagement hack" />
   <meta property="og:image" content="http://www.hackmancity.co.uk/img/hackmcfc-fb.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -24,8 +24,8 @@
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@ManCityDigital" />
-  <meta name="twitter:title" content="#HACKMANCITY XXXXXXXXX 2017" />
-  <meta name="twitter:description" content="Manchester City football club's XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+  <meta name="twitter:title" content="#HACKMANCITY 10-12 February 2017" />
+  <meta name="twitter:description" content="Manchester City football club's first digital fan enagement hack" />
   <meta name="twitter:image" content="http://www.hackmancity.co.uk/img/hackmcfc-tw.jpg" />
   <meta name="twitter:url" content="http://www.hackmancity.co.uk" />
 </head>
