Added venue photos and virtual map

--- a/index.html
+++ b/index.html
@@ -195,12 +195,13 @@
 </section><!-- .schedule -->
 
 <section class="where">
+  <div class="frame-container">
+    <iframe id="viewer590126" src="https://api.inspiredlabs.com/viewer?yaw=358%2E53&project=Manchester%2DCity%2FJoes%2DReshoot%2D247700401394343%2F2nd%2Dfloor%2Fmain&viewerId=viewer590126&bubble=day&embed=247700401684342&pitch=%2D5%2E87&width=480&location=loc001&height=360&fov=65"> </iframe>
+  </div>
+    
   <div class="where-interior"></div>
+
   <div class="where-text-outer">
-
-    <script src="https://api.inspiredlabs.com/viewer.js">/* */</script>
-    <iframe id="viewer590126" scrolling="no" frameBorder="0" width="480" height="360" src="https://api.inspiredlabs.com/viewer?yaw=358%2E53&project=Manchester%2DCity%2FJoes%2DReshoot%2D247700401394343%2F2nd%2Dfloor%2Fmain&viewerId=viewer590126&bubble=day&embed=247700401684342&pitch=%2D5%2E87&width=480&location=loc001&height=360&fov=65"> </iframe>
-
     <div class="where-text">
       <h2>Where?</h2>
       <p>The event will take place at:</p>
@@ -447,6 +448,7 @@
   </div>
 </footer>
 
+<script src="https://api.inspiredlabs.com/viewer.js">/* */</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="js/video.js"></script>
 <script>
