--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="content">
         <p class="pre-head">10-12 February 2017</p>
         <h1>Manchester City Fan Engagement Hack</h1>
-        <p>Harnessing our understanding of football fans, their needs, motivations and passions to deliver an unrivalled digital experience for local and global fans alike.</p>
+        <p>For this hack, we are challenging you to discover how digital technology can help grow and further reinforce a sense of community and belonging, transcending location, to provide a meaningful, shared football fan experience.</p>
       </div>
     </div>
   </div>
@@ -77,9 +77,11 @@
     </div>
 
     <div class="content about-top">
-      <p class="line-wrap">Following on from our <a href="player-performance-data-july-2016/">world first #HackManCity</a>, we are happy to announce the next hack focused on digital fan engagement. The hack supports the club's digital vision to have the most digitally engaged sports fans in the world. We will be delivering a wealth of research and data around match day experiences and inviting you to develop new insights and innovation in order to create compelling digital products.</p>
-      <p>The previous hack was held at the City Football Academy, however this time around we will be taking you to the Etihad Stadium itself! Immerse yourself in the surroundings, while the club give you access to previously unavailable research and content around fan experiences, behaviours, needs and motivations.</p>
-      <p>We’re looking for the most talented, insightful, innovative and creative programmers, designers, researchers, product people and innovators. To work alongside them we’d also welcome strategists, marketing or social media specialists and of course fans.</p>
+      <p class="line-wrap">Being a fan of a football club has traditionally been a lifetime commitment. But what it means to be a fan today is changing. The traditional ties to clubs through their geography, their founding story, and through family, are starting to wear away. </p>
+      <p>This ever-evolving story of what it means to be a fan and what it is that fans expect of their clubs presents an exciting challenge to the role of the modern football club as it attempts to maintain a connection with the traditional fan base whilst forging connections with new fans in new territories.</p>
+      <p>All of which puts us at an exciting moment in Manchester City’s history – where we can marry on field success to a growing and ever more connected global audience. City was founded more than 100 years ago with a social purpose of bringing the local community together, but how can this be reinterpreted and brought to life in the 21st century with a progressively contrasting fan base in Manchester, the UK and beyond.</p>
+      <p>Increasingly the club relies on digital products to deepen engagement with fans, converting them into stronger supporters by enabling them to connect with the club through compelling content, video and social experiences.</p>
+      <p>Ideas can range from new digital features or content to entirely new digital products, ideally leveraging latest innovations and technologies (e.g. native app functionality, live video, wearables, VR/AR, artificial intelligence etc.)</p>
       <h2>TWO TRACKS</h2>
     </div>
 
@@ -198,7 +200,7 @@
   <div class="frame-container">
     <iframe id="viewer590126" src="https://api.inspiredlabs.com/viewer?yaw=358%2E53&project=Manchester%2DCity%2FJoes%2DReshoot%2D247700401394343%2F2nd%2Dfloor%2Fmain&viewerId=viewer590126&bubble=day&embed=247700401684342&pitch=%2D5%2E87&width=480&location=loc001&height=360&fov=65"> </iframe>
   </div>
-    
+
   <div class="where-interior"></div>
 
   <div class="where-text-outer">
