--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
     <div class="schedule-inner schedule-middle">
       <h3>The Final Whistle - 2pm</h3>
       <p>After all the hard work it’s time to pitch your ideas back to the panel of judges.</p>
-      <p>Then you’ll be invited to xxxxxxxx while the judges make make the difficult decisions. </p>
+      <p>Then you’ll be invited to lunch &amp; a tour of the stadium  while the judges make make the difficult decisions. </p>
     </div>
   </div>
     <div class="schedule-outer">
     <div class="schedule-inner schedule-last ">
       <h3>Award and prize presentations - 4pm</h3>
-      <p>After xxxxxxxxx the judges will deliver their verdicts at 4pm.</p>
-      <p>The best three teams will be selected as the winners. These teams will be given the opportunity to develop their digital product ideas with the Man City Media team. Full details to be confirmed.</p>
+      <p>The judges will deliver their verdicts at 4pm.</p>
+      <p>The best idea will be selected as the winner. Prizes for Spot challenges, Players Player and Academy Player’s Player will be awarded. Full details to be confirmed.</p>
     </div>
   </div>
 
