--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -55,7 +55,7 @@
   <div class="data bottom-pad">
     <div class="content extra-pad">
       <h2>Code of Conduct</h2>
-      <p class="line-wrap">City runs a number of events and conferences throughout the year. We ask that all attendees respect our Code of Conduct.</p>
+      <p class="line-wrap">Manchester City runs a number of events and conferences throughout the year. We ask that all attendees respect our Code of Conduct.</p>
       <p>All attendees, speakers, volunteers (paid or unpaid) and sponsors at events that are run, organised or partnered by Manchester City are required to agree with the following code of conduct. Organisers will enforce this code throughout the event. We expect cooperation from all participants to ensure an enjoyable experience and a safe environment for everybody.</p>
       <h3>The Quick Version</h3>
       <p>Our conferences are dedicated to providing a harassment-free experience for everyone, regardless of gender, age, sexual orientation, disability, physical appearance, body size, race, or religion (or lack thereof). We do not tolerate harassment of conference participants in any form.</p>
