Recap copy changed

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   <div class="data">
     <div class="content extra-pad">
       <h2>Recap</h2>
-      <p class="line-wrap">Here's what happened at the last <a href="player-performance-data-july-2016/">#HACKMANCITY on Player Performace Data</a>.</p>
+      <p class="line-wrap">Here's what happened at the last <a href="player-performance-data-july-2016/">Man City hackathon</a>.</p>
 
       <video id="my-video" class="video-js vjs-16-9" controls preload="auto" poster="img/video-poster.jpg" data-setup="{'fluid': true}">
         <source src="https://dl.dropboxusercontent.com/u/6340770/Hackathon-720.mp4" type='video/mp4'>
