Header section copy changes as per Google doc

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="content">
         <p class="pre-head">10-12 February 2017</p>
         <h1>Manchester City Fan Engagement Hack</h1>
-        <p>For this hack, we are challenging you to discover how digital technology can help grow and further reinforce a sense of community and belonging, transcending location, to provide a meaningful, shared football fan experience.</p>
+        <p>Fans are the heart of a football club and at Manchester City connecting our global fan base with all the excitement and action taking place on and off the pitch is a top priority.</p>
       </div>
     </div>
   </div>
@@ -77,10 +77,10 @@
     </div>
 
     <div class="content about-top">
-      <p class="line-wrap">Being a fan of a football club has traditionally been a lifetime commitment. But what it means to be a fan today is changing. The traditional ties to clubs through their geography, their founding story, and through family, are starting to wear away. </p>
-      <p>This ever-evolving story of what it means to be a fan and what it is that fans expect of their clubs presents an exciting challenge to the role of the modern football club as it attempts to maintain a connection with the traditional fan base whilst forging connections with new fans in new territories.</p>
-      <p>All of which puts us at an exciting moment in Manchester City’s history – where we can marry on field success to a growing and ever more connected global audience. City was founded more than 100 years ago with a social purpose of bringing the local community together, but how can this be reinterpreted and brought to life in the 21st century with a progressively contrasting fan base in Manchester, the UK and beyond.</p>
-      <p>Increasingly the club relies on digital products to deepen engagement with fans, converting them into stronger supporters by enabling them to connect with the club through compelling content, video and social experiences.</p>
+      <p class="line-wrap">The ever-evolving story of what it means to be a fan and how the Club can deliver the access and experiences that allow them to feel closer to the action presents an exciting challenge for any modern football club as it strives to maintain a meaningful connection with its local fan base, whilst forging connections with new fans in new territories.</p>
+      <p>Manchester City was founded more than 100 years ago with the objective of bringing the local community closer together and today this continues to be the Club’s key focus. However, with a fan base of 400 million followers that now extends beyond Manchester to the wider UK, Europe and as far afield as China, the US and Indonesia, to name but a few, connecting the Club with all of our supporters in an authentic and meaningful way presents a new and exciting challenge.</p>
+      <p>Increasingly the Club relies on digital products to deepen engagement with fans, strengthen their support and enable them to connect with the Club through compelling content, video and social experiences.</p>
+      <p>For Manchester City’s second hackathon, we are bringing this challenge to you in order to discover how digital technology can help grow and further reinforce a sense of community and belonging that transcends location and provides a meaningful shared football fan experience for everyone.</p>
       <p>Ideas can range from new digital features or content to entirely new digital products, ideally leveraging latest innovations and technologies (e.g. native app functionality, live video, wearables, VR/AR, artificial intelligence etc.)</p>
       <h2>TWO TRACKS</h2>
     </div>
