--- a/index.html
+++ b/index.html
@@ -237,6 +237,20 @@
       <h2>Recap</h2>
       <p class="line-wrap">Here's what happened at the last <a href="player-performance-data-july-2016/">Manchester City hackathon</a>.</p>
 
+      <div style="display: block; position: relative; max-width: 100%;">
+        <div style="padding-top: 56.25%;">
+          <video class="video-js vjs-16-9" data-video-id="5247796759001"
+              data-account="10228001001"
+              data-player="4Jg6PCnWFg"
+              data-embed="default"
+              class="video-js"
+              controls
+              style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;" poster="img/video-poster.jpg">
+          </video>
+          <script src="https://players.brightcove.net/10228001001/4Jg6PCnWFg_default/index.min.js" ></script>
+          </div>
+      </div>
+
       <video id="my-video" class="video-js vjs-16-9" controls preload="auto" poster="img/video-poster.jpg" data-setup="{'fluid': true}">
         <source src="https://dl.dropboxusercontent.com/u/6340770/Hackathon-720.mp4" type='video/mp4'>
         <!--<source src="MY_VIDEO.webm" type='video/webm'>-->
@@ -388,7 +402,7 @@
 <section class="partners">
   <div class="partners-inner">
     <div class="partners-logos">
-      <h4>Supported by</h4>
+      <!--Put back with sponsors <h4>Supported by</h4>-->
       <ul class="logos">
         <!--<li class="sap">
           <a href="https://go.sap.com/" target="_blank">
@@ -404,13 +418,14 @@
           <a href="http://chyronhego.com/" target="_blank">
             <img src="img/part-chyronhego.png" alt="ChyronHego" />
           </a>
-        </li>-->
+
         <li class="premier-league">
           <a href="http://www.premierleague.com/" target="_blank">
             <img src="img/part-premier-league.png" alt="Premier League" />
           </a>
         </li>
       </ul>
+      </li>-->
     </div>
 
     <div class="partners-logos delivered">
