--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
       <div style="display: block; position: relative; max-width: 100%;">
         <div style="padding-top: 56.25%;">
-          <video class="video-js vjs-16-9" data-video-id="5247796759001"
+          <video data-video-id="5247796759001"
               data-account="10228001001"
               data-player="4Jg6PCnWFg"
               data-embed="default"
@@ -247,15 +247,16 @@
               controls
               style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;" poster="img/video-poster.jpg">
           </video>
-          <script src="https://players.brightcove.net/10228001001/4Jg6PCnWFg_default/index.min.js" ></script>
+          <script src="//players.brightcove.net/10228001001/4Jg6PCnWFg_default/index.min.js" ></script>
           </div>
       </div>
-
+<!--
       <video id="my-video" class="video-js vjs-16-9" controls preload="auto" poster="img/video-poster.jpg" data-setup="{'fluid': true}">
         <source src="https://dl.dropboxusercontent.com/u/6340770/Hackathon-720.mp4" type='video/mp4'>
-        <!--<source src="MY_VIDEO.webm" type='video/webm'>-->
+        source src="MY_VIDEO.webm" type='video/webm'
         <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that supports HTML5 video</p>
       </video>
+-->
     </div>
   </div><!-- .data -->
 </section><!-- .data-wrap -->
