--- a/player-performance-data-july-2016/index.html
+++ b/player-performance-data-july-2016/index.html
@@ -85,15 +85,27 @@
       <p class="line-wrap">Back in July, partners OptaPro and ChyronHego released previously unavailable data and APIs. These featured in-match events, player performance and detailed biometric tracking data.</p>
       <p>There were tonnes of exclusive surprises in store. Including access to behind the scenes performance analysis systems, training facilities, a trip to watch Manchester City W.F.C beat Sunderland 4-0 and £10,000 in prize money.</p>
       <p class="bottom-pad">Here's some of the highlights...</p>
+
     </div>
 
-    <video id="my-video" class="video-js vjs-16-9" controls preload="auto" poster="../img/video-poster.jpg" data-setup="{'fluid': true}">
-      <source src="https://dl.dropboxusercontent.com/u/6340770/Hackathon-720.mp4" type='video/mp4'>
-      <!--<source src="MY_VIDEO.webm" type='video/webm'>-->
-      <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that supports HTML5 video</p>
-    </video>
+    <div style="display: block; position: relative; max-width: 100%;">
+      <div style="padding-top: 56.25%;">
+        <video data-video-id="5247796759001"
+            data-account="10228001001"
+            data-player="4Jg6PCnWFg"
+            data-embed="default"
+            class="video-js"
+            controls
+            style="width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; right: 0px; left: 0px;" poster="img/video-poster.jpg">
+        </video>
+        <script src="//players.brightcove.net/10228001001/4Jg6PCnWFg_default/index.min.js" ></script>
+        </div>
+    </div>
+
+
 
   </div><!-- .about -->
+
 </section><!-- .about-wrap -->
 
 <section class="data-wrap">
