--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   <div class="data">
     <div class="content extra-pad">
       <h2>Recap</h2>
-      <p class="line-wrap">Here's what happened at the last <a href="player-performance-data-july-2016/">Manchester City hackathon</a>.</p>
+      <p class="line-wrap">Here's what happened at the last <a href="player-performance-data-july-2016/">Manchester City Hackathon</a>.</p>
 
       <div style="display: block; position: relative; max-width: 100%;">
         <div style="padding-top: 56.25%;">
