--- a/player-performance-data-july-2016/index.html
+++ b/player-performance-data-july-2016/index.html
@@ -111,7 +111,7 @@
 <section class="data-wrap">
   <div class="data bottom-pad">
     <div class="content extra-pad">
-      <h2>People Said</h2>
+      <h2>What People Said</h2>
       <p class="line-wrap">Here's what people had to say about the experience.</p>
     </div>
 
